prevent horizontal scroll mobile

--- a/css/scss/_bscore_grid.scss
+++ b/css/scss/_bscore_grid.scss
@@ -8,6 +8,7 @@
     min-height: 100vh;
     display: flex;
     flex-direction: column;
+    overflow-x: hidden;
 
     > footer{
       margin-top: auto;
